objects/vlocity_cmt__ObjectAppliedResult__c.object
<CustomObject>
    <description>Execution results for rules applied against a target object.</description>
    <fields>
        <fullName>vlocity_cmt__AppliedDateTime__c</fullName>
        <description>Datetime on which rules were applied to target object.</description>
        <label>Applied Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndState__c</fullName>
        <description>The new state of the target object as a result of the rules applied. The value is either the To, Alternate or From state of the State Transition depending on the Transition Success.</description>
        <formula>IF(vlocity_cmt__IsTransitionSuccess__c, vlocity_cmt__StateTransitionId__r.vlocity_cmt__To__r.Name, IF(AND(NOT(ISNULL(vlocity_cmt__StateTransitionId__r.vlocity_cmt__Alternate__c)), NOT(ISBLANK(vlocity_cmt__StateTransitionId__r.vlocity_cmt__Alternate__c))), vlocity_cmt__StateTransitionId__r.vlocity_cmt__Alternate__r.Name, vlocity_cmt__StateTransitionId__r.vlocity_cmt__From__r.Name))</formula>
        <label>End State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsTransitionSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if target object successfully transitioned to the new state.</description>
        <label>Is Transition Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastDefaultState__c</fullName>
        <description>The last default state recorded in target object&apos;s transaction history.</description>
        <label>Last Default State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecordId__c</fullName>
        <description>Id of object record rules were applied to.</description>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Result__c</fullName>
        <description>Serialized object containing information about the rules that were applied and their results.</description>
        <label>Result</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateTransitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of state transition associated with applied rules.</description>
        <label>State Transition</label>
        <referenceTo>vlocity_cmt__VlocityStateTransition__c</referenceTo>
        <relationshipLabel>Object Applied Results</relationshipLabel>
        <relationshipName>ObjectAppliedResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateTransitionName__c</fullName>
        <description>Name of state transition associated with applied rules.</description>
        <formula>vlocity_cmt__StateTransitionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Transition Name</label>
        <type>Text</type>
    </fields>
    <label>Object Applied Result</label>
    <nameField>
        <label>Object Applied Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Applied Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>